[package]
name = "ruru"
version = "0.1.0"
edition = "2021"

default-run = "ruru"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
show-image = { version = "0.14.0", features = ["image"] }
image = "0.25.1"
quick-xml = "0.35.0"
ndarray = "0.15"
mac_address = "1.1"
